# direct2d-playground

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd
src/: main.cpp
